--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
   height: 30vh;
   padding: 1rem;
   display: fixed;
-
+  position: relative;
   .navitems{
     display: flex;
     align-items: flex-start;
@@ -40,7 +40,7 @@
             padding-left: 0.5rem;
         }
       }
-      .search{
+    .search{
         height: 100%;
         display: flex;
         align-items: center;
@@ -73,43 +73,90 @@
             }
             
         }
-      }
-      .options{
+    }
+    .options{
         height: 100%;
         display: flex;
         align-items: center;
-        gap: 1rem;
-        position: relative;
-        .count{
-          position: absolute;
-          height: 17px;
-          width: 17px;
+        .suboptions{
           display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 100%;
-          background-color: red;
-          left: 15px;
-          top: 40px;
-          color: aliceblue;
-          font-size: small;
-        }
-        .notification{
+          gap: 5px;
+          .div1{
             height: 50px;
             width: 50px;
-            background-color: black;
-        }
-        .profile{
+            // background-color: white;
+            display: flex;
+            align-items: center;
+            position: relative;
+            .count{
+              width: 14px;
+              height: 14px;
+              position: absolute;
+              top: 7px;
+              left: 15px;
+              background-color: rgb(227, 4, 4);
+              border-radius: 100%;
+              font-size:smaller;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+          .div2{
             height: 50px;
             width: 50px;
-            background-color: rgb(74, 33, 33);
+            background-color: rgb(128, 25, 25);
             border-radius: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
+          }
         }
-      }
+    }
+      // .options{
+      //   height: 100%;
+      //   width: 10%;
+      //   display: flex;
+      //   align-items: center;
+      //   gap: 1rem;
+      //   position: relative;
+      //   // .bell{
+      //   //   top: 0;
+      //   //   right: 0;
+      //   // }
+      //   .count{
+      //     position: absolute;
+      //     height: 17px;
+      //     width: 17px;
+      //     display: flex;
+      //     justify-content: center;
+      //     align-items: center;
+      //     border-radius: 100%;
+      //     background-color: red;
+      //     left: 15px;
+      //     top: 40px;
+      //     color: aliceblue;
+      //     font-size: small;
+      //   }
+      //   .notification{
+      //       height: 50px;
+      //       width: 50px;
+      //       background-color: black;
+      //   }
+      //   .profile{
+      //       height: 50px;
+      //       width: 50px;
+      //       margin-right: 2px;
+      //       top: 25px;
+      //       right: 0;
+      //       background-color: rgb(74, 33, 33);
+      //       border-radius: 100%;
+      //       display: flex;
+      //       justify-content: center;
+      //       align-items: center;
+      //       color: white;
+      //   }
+      // }
     }
 
 }
