--- a/src/Layout/Layout.scss
+++ b/src/Layout/Layout.scss
@@ -1,4 +1,4 @@
-.dashboard{
+main{
     width: 78%;
     height: 84vh;
     background-color: aliceblue;
@@ -7,5 +7,4 @@
     right: 16px;
     border-radius: 20px;
     padding: 25px;
-    
 }
